<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Singin">

    <EditText
        android:id="@+id/temp_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/temp_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_usuario" />

    <EditText
        android:id="@+id/temp_sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sobrenome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_nome" />

    <EditText
        android:id="@+id/temp_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_sobrenome" />

    <CheckBox
        android:id="@+id/temp_termos"
        android:layout_width="208dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="107dp"
        android:text="@string/termos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_senha" />

    <RadioGroup
        android:id="@+id/temp_radio"
        android:layout_width="191dp"
        android:layout_height="99dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_termos">

        <RadioButton
            android:id="@+id/temp_musculacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musculacao" />

        <RadioButton
            android:id="@+id/temp_maratona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maratona" />

        <RadioButton
            android:id="@+id/temp_cross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cross_fit" />
    </RadioGroup>

    <Button
        android:id="@+id/temp_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="sendSingIn"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_radio" />

    <Button
        android:id="@+id/temp_limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="20dp"
        android:onClick="sendClear"
        android:text="@string/limpar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temp_cadastrar"
        app:layout_constraintTop_toBottomOf="@+id/temp_radio" />
</androidx.constraintlayout.widget.ConstraintLayout>